[package]
name = "idencomp"
version = "0.1.0"
edition = "2021"
rust-version = "1.62"
description = "Idencomp genetic data compressor and decompressor library"
categories = ["encoding", "compression", "science"]
authors = ["Mateusz Maćkowski <mateusz@mackowski.org>"]
keywords = ["compression", "genetics", "DNA", "nucleotides", "cram", "fasta", "fastq"]
readme = "../README.md"
repository = "https://github.com/m4tx/idencomp.git"
homepage = "https://github.com/m4tx/idencomp"
license = "MIT"

[[bench]]
name = "simple_1m"
harness = false

[[bench]]
name = "fastq"
harness = false

[[bench]]
name = "context_binning"
harness = false

[dependencies]
anyhow = "1.0.63"
binrw = "0.9.2"
brotli = "3.3.4"
byteorder = "1.4.3"
crc32fast = "1.3.2"
derive_more = "0.99.17"
flate2 = "1.0.24"
idencomp-macros = { path = "../idencomp-macros" }
itertools = "0.10.3"
lazy_static = "1.4.0"
log = "0.4.17"
number_prefix = "0.4.0"
rand = "0.8.5"
rand_xoshiro = "0.6.0"
rans = "0.2.1"
rayon = "1.5.3"
rmp-serde = "1.1.0"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
sha3 = "0.10.2"
threadpool = "1.8.1"

[dev-dependencies]
approx = "0.5.1"
criterion = "0.3.6"
env_logger = "0.9.0"
serde_test = "1.0.144"
test-log = "0.2.11"
